<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AlumnoCrud">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/alumno"
        android:height="60dp"
        android:textSize="40sp"
        android:background="#E42441"
        android:textColor="#FFFFFF">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rut"
            android:inputType="number"
            android:hint="@string/rut"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:inputType="text"
            android:hint="@string/nombre"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/direccion"
            android:inputType="text"
            android:hint="@string/direccion"
            android:importantForAutofill="no" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comuna" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agregar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/d_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/d_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eliminar"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/lista"
            android:layout_weight="0.2"
            android:layout_marginTop="10dp">
        </ListView>
    </LinearLayout>

</LinearLayout>