<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IngresoNota">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="60dp"
        android:background="#E42441"
        android:gravity="top"
        android:text="@string/notas"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/rut"
            android:inputType="number"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/d_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buscar"
            android:layout_marginHorizontal="1dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/t_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/nombre" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/nota"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/d_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agregar"
            android:layout_marginHorizontal="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2">
        </ListView>

    </LinearLayout>

</LinearLayout>